feat: 분류 함수 (python)

--- a/gptTest/index.html
+++ b/gptTest/index.html
@@ -20,8 +20,8 @@
 
         const user_id = 'user123';
         const content = text;
-        const mode = 0;
-        const alarm = null;
+        const mode = 1;
+        const alarm = 10;
 
         const response = await axios.post('http://localhost:3000/chat/send', {
         user_id,
